# neural_network_from_scratch

./: Cargo.toml
data/: xor.json
src/: data.rs  main.rs  main_.rs_  mat_loader.rs  nn.rs  utils.rs
