[package]
name = "nn_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
argparse = "0.2.2"
rand = "0.8.5"
approx = "0.5.1"
plotters = {version = "0.3.5", default-features = true, features = ["fontconfig-dlopen"]}
matio-rs = {version = "1.3.1", default-features = true, features = ["nalgebra"]}
csv = "1.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }



